为何引入ActiveMQ、ActiveMQ的安装、ActiveMQ发送queue消息和接收Queue消息、ActiveMQ发送topic消息和接收topic消息、ActiveMQ持久化Topic消息 添加商品同步到索引库以及消息机制测试

--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -102,6 +102,22 @@
             <artifactId>zkclient</artifactId>
         </dependency>
 
+        <!--activemq -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
+
+        <!--JMail组件-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.mail</groupId>-->
+            <!--<artifactId>mail</artifactId>-->
+            <!--<version>1.4</version>-->
+        <!--</dependency>-->
 
 
     </dependencies>
